added profile for JDK 32-bit support